Fix modal color for dark mode

--- a/client/src/components/ConversationList.css
+++ b/client/src/components/ConversationList.css
@@ -281,4 +281,9 @@
     .conversation-modal form input {
         border: 1px solid #444444;
     }
+
+    .conversation-delete-modal {
+        background-color: #0c0c0c;
+        border: 1px solid #444444;
+    }
 }
